--- a/index.html
+++ b/index.html
@@ -14,52 +14,52 @@
 
 <body>
 
-
-
-    <span id="menu">
+    <div id="menu">
         <ul>
             <li>Gmail</li>
             <li>Images</li>
-            <li><img src = "images/menu_gg.png"/></li>
-            <li><img src = "images/notifications.png"/></li>
+            <li><img src="images/menu_gg.png" /></li>
+            <li><img src="images/notifications.png" /></li>
+            <li>
+                <INPUT TYPE="submit" NAME="connect" VALUE="Connexion" id="connect">
+            </li>
         </ul>
-
-
-
-
-
-    </span>
-
-
-    <div id="container">
-
-        <img src="images/logo.png" />
-
-
-        <form id="barre">
-            <input type="text" name="pseudo" id="pseudo" placeholder="The Hacking Project" size="30" maxlength="10" />
-        </form>
-        <form id="bouton">
-            <INPUT TYPE="submit" NAME="recherche" VALUE="Recherche Google">
-            <INPUT TYPE="submit" NAME="chance" VALUE="J'ai de la chance">
-        </form>
-
     </div>
 
 
-    <span id="footer">
-        <ul>
+    <div id="container">
+        <div class="logo">
+            <img src="images/logo.png">
+        </div>
+        <div class="barre">
+            <div class="search">
+                <form>
+                    <input type=text>
+                </form>
+            </div>
+            <div class="micro">
+                <a href=""><img class="image-logo" src="images/mic.png"></a>
+            </div>
+        </div>
+        <div id="bouton">
+            <INPUT TYPE="submit" NAME="recherche" VALUE="Recherche Google">
+            <INPUT TYPE="submit" NAME="chance" VALUE="J'ai de la chance">
+        </div>
+    </div>
+
+
+
+    <div id="footer">
+        <ul id="<gauche">
             <li>Publicité</li>
             <li>Entreprise</li>
             <li>A propos</li>
         </ul>
-        <ul>
+        <ul id="droite">
             <li>Confidentialité</li>
             <li>Conditions</li>
             <li>Paramètres</li>
         </ul>
-
-
-    </span>
+    </div>
 
 </body>
