--- a/index.html
+++ b/index.html
@@ -1,65 +1,54 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8">
-
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://www.google.com/s2/favicons?domain=www.gmail.com" />
-
-    <link rel="stylesheet" type="text/css" href="style.css">
-
-
     <title>The Hacking Project Google</title>
 </head>
 
 <body>
-
-    <div id="menu">
-        <ul>
-            <li>Gmail</li>
-            <li>Images</li>
-            <li><img src="images/menu_gg.png" /></li>
-            <li><img src="images/notifications.png" /></li>
-            <li>
-                <INPUT TYPE="submit" NAME="connect" VALUE="Connexion" id="connect">
-            </li>
-        </ul>
+    <div class="menu">
+        <div class="lien-haut">
+            <ul>
+                <li class="lien_menu"><a class="item_menu" href="">Gmail</a></li>
+                <li class="lien_menu"><a class="item_menu" href="">Images</a></li>
+                <li class="lien_menu"><img id="app-icon" src="images/menu_gg.png"></li>
+                <li class="lien_menu"><a class="sign-in" href="">Connexion</a></li>
+            </ul>
+        </div>
+        <div style="clear:both"></div>
     </div>
-
-
     <div id="container">
         <div class="logo">
             <img src="images/logo.png">
         </div>
-        <div class="barre">
+        <div class="search-bar">
             <div class="search">
                 <form>
-                    <input type=text>
+                    <input type=text value="The Hacking Project">
                 </form>
             </div>
-            <div class="micro">
+            <div class="mic">
                 <a href=""><img class="image-logo" src="images/mic.png"></a>
             </div>
         </div>
-        <div id="bouton">
-            <INPUT TYPE="submit" NAME="recherche" VALUE="Recherche Google">
-            <INPUT TYPE="submit" NAME="chance" VALUE="J'ai de la chance">
+        <div id="boutons">
+            <a class="clic" href="http://thehackingproject.org/">Recherche Google</a>
+            <a class="clic" href="">J'ai de la chance</a>
         </div>
     </div>
-
-
-
     <div id="footer">
-        <ul id="<gauche">
-            <li>Publicité</li>
-            <li>Entreprise</li>
-            <li>A propos</li>
-        </ul>
-        <ul id="droite">
-            <li>Confidentialité</li>
-            <li>Conditions</li>
-            <li>Paramètres</li>
-        </ul>
+        <div id="left_footer">
+            <a class="lien_pied" href="">Publicité</a>
+            <a class="lien_pied" href="">Entreprise</a>
+            <a class="lien_pied" href="">A propos</a>
+        </div>
+        <div id="right_footer">
+            <a class="lien_pied" href="">Confidentialité</a>
+            <a class="lien_pied" href="">Conditions d'utilisation</a>
+            <a class="lien_pied" href="">Paramètres</a>
+        </div>
     </div>
-
 </body>
+</html>
